--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet"/>
     <script type="text/javascript" src="./script.js"></script> 
-    <title>termProject</title>
+    <title>Test</title>
     <nav class="navBar">
         <div id="logo" onclick="goIndex()">LOGO</div>
         <a id="intro" onclick="goIntro()">소개</a>
